Убират баг очищающий LS

--- a/src/index.html
+++ b/src/index.html
@@ -226,11 +226,24 @@
           <div class="statement">
           <p class="statement__title">Вы действитель хотите выйти?</p>
           <div class="statement__wrapper">
-          <button type="button" class="statement__btn-yes">Да</button>
+          <button type="button" class="statement__btn-yes clear">Да</button>
+          <!-- <button type="button" class="statement__btn-yes clear">Да</button> -->
           <button type="button" class="statement__btn-no">Нет</button>
         </div>
       </div>
       </div>
+     
+      <div class="statement-backdrop-clear hidden-statement hidden">
+          <div class="statement">
+          <p class="statement__title clear">Вы действитель хотите выйти?</p>
+          <div class="statement__wrapper">
+          <button type="button" class="statement__btn-yes-clear">Да</button>
+          <!-- <button type="button" class="statement__btn-yes clear">Да</button> -->
+          <button type="button" class="statement__btn-no-clear">Нет</button>
+        </div>
+      </div>
+      </div>
+
     </div>
    </main>
    <footer></footer>
