Реализация добаления кастомных полей

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,17 @@
    </header>
    <main>
     <div class="container">
+      <div class="contact__wrapper-create hidden" >
+        <div class="create-field-wrapper ">
+          <label>
+       <input type="text" placeholder="Название поля" class="create-field-name">
+       <input type="text" placeholder="Информация" class="create-field-info">
+          </label>
 
+       <button type="button" class="create-field-save-btn">Сохранить</button>
+       <button type="button" class="create-field-close-btn">Закрыть</button>
+     </div>
+      </div>
       <div class="wrapper-main-btn">
        <button type="button" class="create-btn">Создать контакт</button>
        <button type="button" class="create-btn-clear">Очистить всё</button>
