--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
    </header>
    <main>
     <div class="container">
-      <div class="contact__wrapper-create hidden" >
+      <div class="contact__wrapper-create is-hidden " >
         <div class="create-field-wrapper ">
           <label>
        <input type="text" placeholder="Название поля" class="create-field-name">
@@ -32,6 +32,7 @@
        <button type="button" class="create-field-close-btn">Закрыть</button>
      </div>
       </div>
+      
       <div class="wrapper-main-btn">
        <button type="button" class="create-btn">Создать контакт</button>
        <button type="button" class="create-btn-clear">Очистить всё</button>
