--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
    </header>
    <main>
     <div class="container">
-      <div class="contact__wrapper-create is-hidden " >
+      <div class="contact__wrapper-create  " >
         <div class="create-field-wrapper ">
           <label>
        <input type="text" placeholder="Название поля" class="create-field-name">
